# X2V50_3.0

./: README.md  clean  makefile  修改记录.xls
IQ/SC401AI/: 创亿胜401ai_2G3P配置文件.rar
IQ/SC401AI/创亿胜401ai_2G3P配置文件/: AutoScene.ini  PQTool.ini
IQ/SC401AI/原效果/: AutoScene.ini  PQTool.ini
IQ/SC401AI/捷行者/: 2024.5.28效果参数对应屏效_1.txt  2024.6.18效果参数对应屏效_2.txt  PQTool.ini
IQ/SC401AI/星河安效果/: AutoScene.ini  PQTool.ini
bak/bak_Audio/Ai_english/: Please insert the SD card_16k.pcm  Start recording_16k.pcm  Stop recording_16k.pcm  Video locked_16k.pcm  WiFi is turned off.pcm  WiFi is turned on.pcm
bak/bak_Audio/Aipaipai_standby/: Photo success.pcm  Please fasten your seat belt(russian).pcm  Please fasten your seat belt.pcm  Recorder has been turned off.pcm
bak/bak_Audio/ct317_audio/: Please insert the SD card_16k.pcm  Start recording_16k.pcm  dididi.pcm  dididi_2s.pcm  haode_16k.pcm  kaiji_16k.pcm  shutdown_16k.pcm
bak/bak_osd/osd_32x64_yellow/: osd_str0.rgb  osd_str1.rgb  osd_str2.rgb  osd_str3.rgb  osd_str4.rgb  osd_str5.rgb  osd_str6.rgb  osd_str7.rgb  osd_str8.rgb  osd_str9.rgb  osd_strA.rgb  osd_strB.rgb  osd_strC.rgb  osd_strD.rgb  osd_strE.rgb  osd_strF.rgb  osd_strG.rgb  osd_strH.rgb  osd_strI.rgb  osd_strJ.rgb  osd_strK.rgb  osd_strL.rgb  osd_strM.rgb  osd_strN.rgb  osd_strO.rgb  osd_strP.rgb  osd_strQ.rgb  osd_strR.rgb  osd_strS.rgb  osd_strT.rgb  osd_strU.rgb  osd_strV.rgb  osd_strW.rgb  osd_strX.rgb  osd_strY.rgb  osd_strZ.rgb  osd_str_a.rgb  osd_str_b.rgb  osd_str_c.rgb  osd_str_d.rgb  (+31 more)
include/: CommDef.h  HttpDef.h  Log.h  SunAlgorithm.h  TimeUtil.h  XMIPDef.h  XMThread.h  xm_middleware_api.h  xm_middleware_def.h  xm_middleware_network.h
include/650V200/comm/: adr.h  dataAssist.h  io.h  pwm.h
include/650V200/fvideo/: fvideo.h
include/650V200/isp/: mpi_camera.h  mpi_ispapp.h
include/650V200/mpp/: cr_sdio.h  cr_vo.h  mpi_ao.h  mpi_vb.h  mpi_vi.h  rtc_interface.h  xm_comm_vb.h  xm_comm_vo.h  xm_defines.h  xm_version.h
include/650V200/smart/: xm_ia_comm.h  xm_ia_fdr_interface.h  xm_ia_keyword_interface.h  xm_vad_interface.h
include/650V200/usb/: cr_usb.h
include/8520DV200/fvideo/: fvideo.h
include/8520DV200/mpp/: mpi_ai.h  mpi_ao.h  mpi_region.h  mpi_var.h  mpi_vi.h  mpi_vo.h  xm_comm_aio.h  xm_comm_venc.h  xm_comm_video.h  xm_comm_vo.h  xm_common.h  xm_defines.h
include/8520DV200/smart/: xm_ia_adas_interface.h  xm_ia_comm.h  xm_ia_keyword_interface.h  xm_ia_rule.h  xm_ia_td_interface.h  xm_rtc_interface.h  xm_vad_interface.h
include/8521D/fvideo/: fvideo.h
include/8521D/mpp/: mpi_adec.h  mpi_aenc.h  mpi_ai.h  mpi_ao.h  mpi_region.h  mpi_sys.h  mpi_vb.h  mpi_vdec.h  mpi_venc.h  mpi_vi.h  mpi_vo.h  mpi_vpss.h  xm_comm_aio.h  xm_comm_sys.h  xm_comm_vb.h  xm_comm_vdec.h  xm_comm_venc.h  xm_comm_video.h  xm_comm_vo.h  xm_comm_vpss.h  xm_common.h  xm_type.h  (+1 more)
lvgl-8.2.0/: CMakeLists.txt  Makefile  lv_conf.h  lvgl.h
lvgl-8.2.0/examples/: lv_examples.h
pack/: .gitignore  InstallDesc  Makefile  README.md  romfs.tar  说明.txt
pack/6032/: 6032_x.ko  loadpublic  xm713g.ko
pack/8188/: loadpublic
pack/kernel/: uImage
pack/logo/: 480x640.yuv
pack/make_uboot_update_file/: explain.txt  merge_file  merge_file.c  uboot_upgrade_480x640.yuv  uboot_upgrade_key_480x640.yuv
pack/tools/: mkall_16M  mkall_32M  mkfs.ubifs  mksquashfs  ubinize
pack/uboot/: mkubootenv  u-boot-x2v50.env.txt
sample/: CMakeLists.txt  DemoDef.h  RegCtrl.cpp  RegCtrl.h  demo.cpp  setgpio.h
sample/GUI/: GUI.cpp  GUI.h  PageMain.cpp  PageMain.h  PagePlayPic.cpp  PagePlayPic.h  PagePlayback.cpp  PagePlayback.h  PageSet.cpp  PageSet.h  PageSysSet.cpp  PageSysSet.h  PageUsb.cpp  PageUsb.h  PageVideoSet.cpp  PageVideoSet.h  global_data.cpp  global_data.h  global_page.cpp  global_page.h  gps.cpp  gps.h  osd_user.cpp  osd_user.h  set_config.cpp  set_config.h
sample/GUI/porting/: lv_port_disp_template.cpp  lv_port_disp_template.h  lv_port_fs_template.c  lv_port_indev_template.cpp  lv_port_indev_template.h  touch.cpp
sample/log/: LogFileManager.cpp  LogFileManager.h
sample/mpp/: AdBase.cpp  AdBase.h  AudioUnit.cpp  AudioUnit.h  DvrAD.h  IpcAD.cpp  IpcAD.h  MediaFormat.c  MediaFormat.h  MppApi.cpp  MppMdl.cpp  MppMdl.h  VideoDecUnit.cpp  VideoDecUnit.h
sample/network/: HTTPSerMdl.cpp  HTTPSerMdl.h  HttpUnit.cpp  HttpUnit.h  WifiOpr.cpp  WifiOpr.h
sample/periphery/: PeripheryManager.cpp  PeripheryManager.h  PeripheryThread.cpp  PeripheryThread.h  adc.cpp  adc.h  adc_presskey.cpp  adc_presskey.h  car_state_detect.cpp  car_state_detect.h  car_state_detect_xm629.cpp  i2c.cpp  i2c.h  io.cpp  io.h  power.cpp  power.h  pwm.cpp  pwm.h  uart.cpp  uart.h  wtd.cpp  wtd.h  xm_tp2804.cpp
update/: fail.pcm  start.pcm  success.pcm
(+272 files in other folders)
